# place-timelapse-2022

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain
.cargo/: config.toml
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: lib.rs
src/: main.rs
tools/place-combine/: Cargo.toml
tools/place-combine/src/: combine.rs
tools/place-compress/: Cargo.toml
tools/place-compress/src/: main.rs
